#569 fixed z-index and moved shield overlay

--- a/src/components/_base-components/dialog/main-dialog/style.less
+++ b/src/components/_base-components/dialog/main-dialog/style.less
@@ -7,7 +7,6 @@
     display: grid;
     justify-content: center;
     align-content: center;
-    z-index: 200;
     >.dialog-widget {
         >.widget-content {
             >.tab-container {
