--- a/src/components/_base-components/dialog/overlay-dialog/style.less
+++ b/src/components/_base-components/dialog/overlay-dialog/style.less
@@ -1,11 +1,10 @@
 .overlay-dialog {
     position: fixed;
     left: 22rem;
-    right: 22248rem;
+    right: 22rem;
     top: 12rem;
     bottom: 10rem;
     display: grid;
     justify-content: center;
     align-content: center;
-    z-index: 250;
 }
